Make ContainerNode::EnsurePreInsertionValidity() public, and non-inline.

This is a preparation to fix crbug.com/732217. Range.insertNode() will use
EnsurePreInsertionValidity().

Bug: 732217
Change-Id: I3a348c8b9ea60d1b39b5a1d3b708a092abccbaab
Reviewed-on: https://chromium-review.googlesource.com/530868
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478574}
Former-commit-id: daabe8fd6944d0809179b76a7bd02d9f89044b54